Created a compass with aditional audiohaptic feedback

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">HelloSensor</string>
     <string name="edit_message">Enter a message</string>
-    <string name="button_send">Send</string>
     <string name="info_message">Hello Sensor!</string>
+    <string name="button_accelerometer">Accelerometer</string>
+    <string name="button_Compass">Kompass</string>
 </resources>
